implementation put delete and close
